--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "css-loader": "^5.0.1",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.0",
     "prettier": "^2.1.2",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
